--- a/HandTrackingModule.ipynb
+++ b/HandTrackingModule.ipynb
@@ -2,20 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 658, 501]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-18 16:14:07.718 Python[50214:3246389] WARNING: Secure coding is automatically enabled for restorable state! However, not on all supported macOS versions of this application. Opt-in to secure coding explicitly by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState:.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 661, 536]\n",
+      "[4, 667, 539]\n",
+      "[4, 675, 547]\n",
+      "[4, 668, 547]\n",
+      "[4, 640, 509]\n",
+      "[4, 632, 419]\n",
+      "[4, 612, 390]\n",
+      "[4, 626, 427]\n",
+      "[4, 639, 452]\n",
+      "[4, 642, 470]\n",
+      "[4, 646, 476]\n",
+      "[4, 649, 499]\n",
+      "[4, 657, 532]\n",
+      "[4, 689, 537]\n",
+      "[4, 761, 566]\n",
+      "[4, 764, 580]\n",
+      "[4, 738, 563]\n",
+      "[4, 680, 505]\n",
+      "[4, 588, 461]\n",
+      "[4, 482, 441]\n",
+      "[4, 485, 447]\n",
+      "[4, 512, 453]\n",
+      "[4, 517, 449]\n",
+      "[4, 517, 443]\n",
+      "[4, 517, 436]\n",
+      "[4, 465, 418]\n",
+      "[4, 393, 400]\n",
+      "[4, 381, 401]\n",
+      "[4, 378, 400]\n",
+      "[4, 432, 403]\n",
+      "[4, 417, 386]\n",
+      "[4, 399, 359]\n",
+      "[4, 384, 353]\n",
+      "[4, 391, 357]\n",
+      "[4, 467, 409]\n",
+      "[4, 480, 414]\n",
+      "[4, 457, 393]\n",
+      "[4, 429, 353]\n",
+      "[4, 406, 324]\n",
+      "[4, 388, 314]\n",
+      "[4, 366, 317]\n",
+      "[4, 413, 323]\n",
+      "[4, 387, 309]\n",
+      "[4, 375, 340]\n",
+      "[4, 390, 352]\n",
+      "[4, 387, 355]\n",
+      "[4, 458, 437]\n",
+      "[4, 494, 544]\n",
+      "[4, 488, 552]\n",
+      "[4, 456, 562]\n",
+      "[4, 145, 149]\n",
+      "[4, 517, 468]\n",
+      "[4, 513, 468]\n",
+      "[4, 533, 465]\n",
+      "[4, 572, 384]\n",
+      "[4, 506, 274]\n",
+      "[4, 419, 160]\n",
+      "[4, 472, 127]\n",
+      "[4, 535, 269]\n",
+      "[4, 548, 325]\n",
+      "[4, 530, 326]\n",
+      "[4, 504, 302]\n",
+      "[4, 564, 352]\n",
+      "[4, 482, 185]\n",
+      "[4, 480, 162]\n",
+      "[4, 516, 159]\n",
+      "[4, 570, 195]\n",
+      "[4, 611, 182]\n",
+      "[4, 617, 179]\n",
+      "[4, 649, 184]\n",
+      "[4, 631, 119]\n",
+      "[4, 613, 221]\n"
+     ]
+    },
     {
      "ename": "ValueError",
      "evalue": "min() arg is an empty sequence",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-296da38dca77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"__main__\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 117\u001b[1;33m     \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-6-296da38dca77>\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    100\u001b[0m         \u001b[0msuccess\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdetector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindHands\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m         \u001b[0mlmList\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbbox\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdetector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindPosition\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlmList\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlmList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-6-296da38dca77>\u001b[0m in \u001b[0;36mfindPosition\u001b[1;34m(self, img, handNo, draw)\u001b[0m\n\u001b[0;32m     49\u001b[0m                     \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcircle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m255\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m255\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFILLED\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m         \u001b[0mxmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxmax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m         \u001b[0mymin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mbbox\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxmin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymin\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxmax\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mymax\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 117\u001b[0m\n\u001b[1;32m    114\u001b[0m         cv2\u001b[38;5;241m.\u001b[39mwaitKey(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 117\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[2], line 102\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    100\u001b[0m success, img \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m    101\u001b[0m img \u001b[38;5;241m=\u001b[39m detector\u001b[38;5;241m.\u001b[39mfindHands(img)\n\u001b[0;32m--> 102\u001b[0m lmList, bbox \u001b[38;5;241m=\u001b[39m \u001b[43mdetector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfindPosition\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lmList) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    104\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lmList[\u001b[38;5;241m4\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[2], line 51\u001b[0m, in \u001b[0;36mhandDetector.findPosition\u001b[0;34m(self, img, handNo, draw)\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m draw:\n\u001b[1;32m     49\u001b[0m             cv2\u001b[38;5;241m.\u001b[39mcircle(img, (cx, cy), \u001b[38;5;241m5\u001b[39m, (\u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m255\u001b[39m), cv2\u001b[38;5;241m.\u001b[39mFILLED)\n\u001b[0;32m---> 51\u001b[0m xmin, xmax \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mxList\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mmax\u001b[39m(xList)\n\u001b[1;32m     52\u001b[0m ymin, ymax \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(yList), \u001b[38;5;28mmax\u001b[39m(yList)\n\u001b[1;32m     53\u001b[0m bbox \u001b[38;5;241m=\u001b[39m xmin, ymin, xmax, ymax\n",
+      "\u001b[0;31mValueError\u001b[0m: min() arg is an empty sequence"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -30,8 +133,8 @@
     "    def __init__(self, mode=False, maxHands=2, detectionCon=0.5, trackCon=0.5):\n",
     "        self.mode = mode\n",
     "        self.maxHands = maxHands\n",
-    "        self.detectionCon = detectionCon\n",
-    "        self.trackCon = trackCon\n",
+    "        self.detectionCon = int(detectionCon)\n",
+    "        self.trackCon = int(trackCon)\n",
     "\n",
     "        self.mpHands = mp.solutions.hands\n",
     "        self.hands = self.mpHands.Hands(self.mode, self.maxHands,\n",
@@ -69,14 +172,14 @@
     "                self.lmList.append([id, cx, cy])\n",
     "                if draw:\n",
     "                    cv2.circle(img, (cx, cy), 5, (255, 0, 255), cv2.FILLED)\n",
+    "                    \n",
+    "            xmin, xmax = min(xList), max(xList)\n",
+    "            ymin, ymax = min(yList), max(yList)\n",
+    "            bbox = xmin, ymin, xmax, ymax\n",
     "\n",
-    "        xmin, xmax = min(xList), max(xList)\n",
-    "        ymin, ymax = min(yList), max(yList)\n",
-    "        bbox = xmin, ymin, xmax, ymax\n",
-    "\n",
-    "        if draw:\n",
-    "            cv2.rectangle(img, (xmin - 20, ymin - 20), (xmax + 20, ymax + 20),\n",
-    "            (0, 255, 0), 2)\n",
+    "            if draw:\n",
+    "                cv2.rectangle(img, (xmin - 20, ymin - 20), (xmax + 20, ymax + 20),\n",
+    "                (0, 255, 0), 2)\n",
     "\n",
     "        return self.lmList, bbox\n",
     "\n",
@@ -116,7 +219,7 @@
     "def main():\n",
     "    pTime = 0\n",
     "    cTime = 0\n",
-    "    cap = cv2.VideoCapture(1)\n",
+    "    cap = cv2.VideoCapture(0)\n",
     "    detector = handDetector()\n",
     "    while True:\n",
     "        success, img = cap.read()\n",
@@ -141,12 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!pip install mediapipe"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -172,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
